Updated VTN website, added readable past issues in a column-card format (thank you Bootstrap) along with images and brief descriptions.

--- a/vtn.css
+++ b/vtn.css
@@ -2,6 +2,8 @@ h2 {
 	font-family: Abril Fatface;
 	font-size: 3em;
 	text-align: center;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 h4 {
 	font-family: Abril Fatface;
@@ -10,9 +12,9 @@ h4 {
 }
 p {
 	font-family: Roboto Condensed, sans-serif;
-	font-size: 1.5em;
-	margin-left: 20%;
-	margin-right: 20%;
+	font-size: 170%;
+	margin-left: 17%;
+	margin-right: 17%;
 }
 hr {
 	margin-left: 30%;
@@ -20,7 +22,7 @@ hr {
 }
 button {
 	background-color: white;
-	width: 15%;
+	width: 20%;
 	height: 2.7em;
 	font-family: Roboto Condensed, sans-serif;
 	font-size: 120%;
@@ -28,6 +30,8 @@ button {
 	border-width: 1px;
 	border-color: black;
 	margin-bottom: 5%;
+	margin-top: 1em;
+	text-align: center;
 }
 button:hover {
 	background-color: black;
@@ -36,18 +40,62 @@ button:hover {
 section {
 	width: 70%;
 	margin-left: 15%;
-	margin-right: 15%em;
-	line-height: 180%;
+	margin-right: 15%;
+	line-height: 200%;
+}
+a {
+	text-decoration: none;
+	color: black;
+}
+a:hover {
+	color: black;
 }
 #heading2 {
 	color: #ea4977;
 }
+#card1 {
+	margin-bottom: 2em;
+}
+#card2 {
+	margin-bottom: 2em;
+}
 #img1 {
-	scale: 100%;
+	scale: 120%;
 	height: 70%;
 	width: 70%;
 	margin-right: 15%;
 	margin-left: 15%;
+	margin-top: 2em;
+}
+#card1:hover, #card2:hover, #card3:hover {
+	opacity: 50%;
+}
+#img3 {
+	margin-bottom: 3em;
+	margin-top: 3em;
+}
+#img4 {
+	scale: 50%;
+	margin-bottom: 0em;
+}
+#nl {
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+#cardtext1, #cardtext2, #cardtext3 {
+	font-family: Roboto Condensed, sans-serif;
+	font-size: 1em;
+	text-align: left;
+}
+#cardtext3 {
+	padding-bottom: 6em;
+}
+#card3 {
+	padding-bottom: 0.7em;
+	background-color: darkgray;
+}
+#card2 {
+	padding-bottom: 3em;
 }
 html {
 	scroll-behavior: smooth;
